# lakeflow-community-connectors

./: .gitignore  databricks.yml
requirements/: sources.txt
src/databricks/labs/community_connector/sources/dicomweb/: pyproject.toml
src/databricks/labs/community_connector/sources/hl7/: PLAN.md  README.md  __init__.py  _generated_hl7_python_source.py  apply_comments.py  connector_spec.yaml  hl7.py  hl7_api_doc.md  hl7_parser.py  hl7_schemas.py  pyproject.toml
src/databricks/labs/community_connector/sources/hl7_v2/: README.md  UI_SETUP_GUIDE.md  _generated_hl7_v2_python_source.py  connector_spec.yaml  hl7_v2.py  hl7_v2_api_doc.md  hl7_v2_composites.py  hl7_v2_extractors.py  hl7_v2_parser.py  hl7_v2_schemas.py  pyproject.toml
tests/unit/sources/hl7/: test_hl7_lakeflow_connect.py
tests/unit/sources/hl7/samples/: sample_adt.hl7
tests/unit/sources/hl7_v2/: test_batch_splitting.py  test_extractor_coverage.py  test_hl7_v2_delta_lakeflow_connect.py  test_hl7_v2_lakeflow_connect.py  test_hl7_v2_parser.py  test_hl7_v2_schemas.py  test_segment_al1.py  test_segment_dg1.py  test_segment_evn.py  test_segment_ft1.py  test_segment_generic.py  test_segment_gt1.py  test_segment_iam.py  test_segment_in1.py  test_segment_mrg.py  test_segment_msh.py  test_segment_nk1.py  test_segment_nte.py  test_segment_obr.py  test_segment_obx.py  test_segment_orc.py  test_segment_pd1.py  test_segment_pid.py  test_segment_pr1.py  test_segment_pv1.py  test_segment_pv2.py  test_segment_rxa.py  test_segment_sch.py  test_segment_spm.py  test_segment_txa.py
tests/unit/sources/hl7_v2/configs/: dev_config_delta.json  dev_config_gcp.json  dev_table_config_delta.json
tests/unit/sources/hl7_v2/samples/: sample_adt_comprehensive.hl7  sample_dft_financial.hl7
tools/scripts/: merge_python_source.py
