[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lakeflow-community-connectors-hl7"
version = "0.1.0"
description = "HL7 v2 connector for Lakeflow Community Connectors"
requires-python = ">=3.10"
dependencies = [
    "pyspark>=3.5.0",
    "lakeflow-community-connectors>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools]
packages = ["databricks.labs.community_connector.sources.hl7"]

[tool.setuptools.package-dir]
"databricks.labs.community_connector.sources.hl7" = "."

[tool.setuptools.package-data]
"*" = ["*.json", "*.md", "*.yaml"]
